Acrescenta o índice e as conexões aos títulos

--- a/index.html
+++ b/index.html
@@ -12,37 +12,45 @@
     <hr>
     <br>
 
+    <!--Criação do índice da página-->
+
+    <ol>
+        <li><a href="#titulo1">Por onde passei</a></li>
+        <li><a href="#titulo2">Primeira formação</a></li>
+        <li><a href="#titulo3">Experiência como desenvolvedor</a></li>
+        <li><a href="#titulo4">Habilidades sociocomportamentais</a></li>
+        <li><a href="#titulo5">Nas horas vagas...</a></li>
+    </ol>
+
     <!--Foto com audiodescrição-->
 
     <img src="./IMG-20210812-WA0024.jpg" alt="Foto de Saulo. Saulo é um homem branco, de cabelos curtos, olhos e cabelos castanhos, sombrancelhas bem definidas. Na foto, veste uma camisa cinza sobreposta por um colete jeans. O fundo da foto é preto. Saulo está com um dos braços dobrados, mas com a mão espalmada, mostrando levemente os dedos. No rosto de Saulo, um sorriso tímido e uma das sombrancelhas esá levemente arqueada." width = "200px" id="foto">
 
     <!--Seção do texto onde passo detalhes da minha trajetória. Note que a estrutura é feita em títulos h4, seguidos de parágrafos simples-->
 
-    <h3>Sobre mim</h3>
-
-    <h4>Por onde passei</h4>
+    <h4 id="titulo1">1. Por onde passei</h4>
 
     <p>Sou brasileiro, nascido em <strong>Juazeiro do Norte, no Ceará</strong>, onde morei até 2015. Em janeiro desse ano decidi me mudar para <strong>João Pessoa, na Paraíba</strong>, onde moro até hoje, no ponto mais oriental da América continental.</p>
     <br>
 
-    <h4>Primeira formação</h4>
+    <h4 id="titulo2">2. Primeira formação</h4>
 
     <p>Sou <strong>tradutor</strong> por formação, tendo o português brasileiro como minha língua materna. Sou fuente em <strong>LIBRAS</strong>, a Língua Brasileira de Sinais. Além disso, comunico-me bem oralmente em <em>inglês</em>; leio e escrevo em <em>inglês, francês e espanhol</em>. Já fiz alguns cursos de <strong>audiodescrição</strong>, mas nunca trabalhei na área, apesar de minhas redes sociais trazerem descrições imagéticas com meu estilo.</p>
     <br>
 
-    <h4>Experiência como desenvolvedor</h4>
+    <h4 id="titulo3">3. Experiência como desenvolvedor</h4>
 
     <p>Atualmente estudo desenvolvimento web na <strong>Trybe</strong>, e estou desenvolvendo minhas habilidades em <em>HTML, CSS e Javascript</em>. Em breve, espero que essa lista de habilidades aumente!</p>
     <br>
 
-    <h4>Habilidades socio-comportamentais</h4>
+    <h4 id="titulo4">4. Habilidades sociocomportamentais</h4>
 
     <p>Sou uma pessoa <strong>comunicativa</strong>, talvez pela minha formação anterior. Estudar tradução me fez desenvolver a habilidade de compreender o que o outro está dizendo, de acordo com o contexto em que está inserido, e a habilidade de fazer as escolhas tradutórias que melhor alcancem a pessoa que precisa daquela tradução. Gosto de pensar que os tradutores são bons comunicadores, pois estão em algum lugar no meio dos das duas pontas da comunicação, precisando equilibrá-las o tempo inteiro. Sou uma pessoa <em>organizada, metódica, com traços de liderança, com certa facilidade para o aprendizado e para a adaptação</em>.</p>
     <br>
 
-    <h4>Nas horas vagas...</h4>
+    <h4 id="titulo5">5. Nas horas vagas...</h4>
     
-    <p>Possuo alguns hobbies, como artes manuais, especificamente quilling e porcelana fria. Fotografia é uma de minhas paixões, e me debruço sob todo o processo, desde a composição do espaço até a pós-edição. Algumas pessoas também dizem que sou bom de escrita, e às vezes eu acredito nelas, o que resulta em alguns contos e crônicas. Toco um pouco de piano, mas o suficiente apenas para eu me divertir, um dia estarei pronto para os palcos. Alem disso, também talvez por cauda do curso de tradução, sou seriador fanático, e você pode conferir<a href="https://bancodeseries.com.br/index.php?action=userPage&uid=1000080430" target="_blank"> nessa página</a> minhas preferências! Mas de todas as atividades às quais me dedico, a que mais tenho orgulho é a <strong>corrida de rua</strong>. Ainda é um desafio para mim, e todos os dias eu subo alguns degraus nesse esporte. Atualmente, sou meio-maratonista. É uma parte da minha vida muito importante para mim.</p>
+    <p>Possuo alguns hobbies, como artes manuais, especificamente quilling e porcelana fria. Fotografia é uma de minhas paixões, e me debruço sob todo o processo, desde a composição do espaço até a pós-edição. Algumas pessoas também dizem que sou bom de escrita, e às vezes eu acredito nelas, o que resulta em alguns contos e crônicas. Toco um pouco de piano, mas o suficiente apenas para eu me divertir, um dia estarei pronto para os palcos. Alem disso, também talvez por cauda do curso de tradução, sou seriador fanático, e você pode conferir <a href="https://bancodeseries.com.br/index.php?action=userPage&uid=1000080430" target="_blank">nessa página</a> minhas preferências! Mas de todas as atividades às quais me dedico, a que mais tenho orgulho é a <strong>corrida de rua</strong>. Ainda é um desafio para mim, e todos os dias eu subo alguns degraus nesse esporte. Atualmente, sou meio-maratonista. É uma parte da minha vida muito importante para mim.</p>
 
     <!--Inserção da foto da corrida com audiodescrição-->
 
