--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!--Foto com audiodescrição-->
 
-    <img src="./IMG-20210812-WA0024.jpg" alt="Foto de Saulo. Saulo é um homem branco, de cabelos curtos, olhos e cabelos castanhos, sombrancelhas bem definidas. Na foto, veste uma camisa cinza sobreposta por um colete jeans. O fundo da foto é preto. Saulo está com um dos braços dobrados, mas com a mão espalmada, mostrando levemente os dedos. No rosto de Saulo, um sorriso tímido e uma das sombrancelhas esá levemente arqueada." width = "200px" id="foto">
+    <img src="./IMG-20210812-WA0024.jpg" alt="Foto de Saulo. Saulo é um homem branco, de cabelos médios, cortados nas laterais, olhos e cabelos castanhos, sombrancelhas bem definidas e óculos. Na foto, veste uma camisa cinza com um cordão cinza. O fundo da foto é uma parede branca. No rosto de Saulo, um sorriso tímido e uma das sombrancelhas esá levemente arqueada." width = "200px" id="foto">
 
     <!--Seção do texto onde passo detalhes da minha trajetória. Note que a estrutura é feita em títulos h4, seguidos de parágrafos simples-->
 
