Muda as fontes do h1 e do body

--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
         body {
             background-color: rgb(25, 29, 50);
             color: whitesmoke;
+            font-family: Verdana, sans-serif;
+        }
+
+        h1 {
+            font-family: Tahoma, sans-serif;
         }
 
         a:visited {
             color: whitesmoke;
+            text-decoration: none;
         }
 
         a:link {
             color: whitesmoke;
+            text-decoration: none;
         }
         
+        strong {
+            color: rgb(69, 58, 73);
+        }
+
     </style>
 
 </head>
