Altera a cor do hiperlink quando o mouse passa por cima

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             text-decoration: none;
         }
         
+        a:hover {
+            color: rgb(186, 44, 115);
+        }
+
         strong {
             color: rgb(109, 59, 71);
         }
