--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
             font-family: Tahoma, sans-serif;
         }
 
+        /* Formatações para o hiperlink quando ele já foi visitado */
+
         a:visited {
             color: whitesmoke;
             text-decoration: none;
         }
+
+        /* Formatações para quando o hiperlink ainda não foi visitado */
 
         a:link {
             color: whitesmoke;
             text-decoration: none;
         }
         
+        /* Formatações para quando o mouse passa por cima do hiperlink */
+
         a:hover {
             color: rgb(186, 44, 115);
         }
