Formata o tamanho dos títulos e coloca o índice em negrito

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             font-family: Tahoma, sans-serif;
         }
 
+        h4 {
+            font-size: 1.2em;
+        }
+
         /* Formatações para o hiperlink quando ele já foi visitado */
 
         a:visited {
@@ -42,6 +46,10 @@
             color: rgb(109, 59, 71);
         }
 
+        .bold {
+            font-weight: bold;
+        }
+
     </style>
 
 </head>
@@ -54,11 +62,11 @@
     <!--Criação do índice da página-->
 
     <ol>
-        <li><a href="#titulo1">Por onde passei</a></li>
-        <li><a href="#titulo2">Primeira formação</a></li>
-        <li><a href="#titulo3">Experiência como desenvolvedor</a></li>
-        <li><a href="#titulo4">Habilidades sociocomportamentais</a></li>
-        <li><a href="#titulo5">Nas horas vagas...</a></li>
+        <li><a href="#titulo1" class="bold">Por onde passei</a></li>
+        <li><a href="#titulo2" class="bold">Primeira formação</a></li>
+        <li><a href="#titulo3" class="bold">Experiência como desenvolvedor</a></li>
+        <li><a href="#titulo4" class="bold">Habilidades sociocomportamentais</a></li>
+        <li><a href="#titulo5" class="bold">Nas horas vagas...</a></li>
     </ol>
 
     <!--Foto com audiodescrição-->
