Cria uma descrição breve e insere o nome, a descrição e a foto dentro de caixas

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 
 </head>
 <body>
-        <h1>Saulo Nascimento Costa</h1>
+    <div><h1>Saulo Nascimento Costa</h1>
 
     <hr>
     <br>
+
+    <!--Foto com audiodescrição-->
+
+        <div><img src="./IMG-20210812-WA0024.jpg" alt="Foto de Saulo. Saulo é um homem branco, de cabelos médios, cortados nas laterais, olhos e cabelos castanhos, sombrancelhas bem definidas e óculos. Na foto, veste uma camisa cinza com um cordão cinza. O fundo da foto é uma parede branca. No rosto de Saulo, um sorriso tímido e uma das sombrancelhas esá levemente arqueada." width = "200px" id="foto"><br>
+
+        Olá!
+        Meu nome é Saulo, e estou desenvolvento minhas habilidades como desenvolvedor. Dou as boas-vindas a você que está adentrando em meu mundo!</div>
+
+    </div>
 
     <!--Criação do índice da página-->
 
@@ -25,12 +34,9 @@
     </ol>
     <br>
 
-    <!--Foto com audiodescrição-->
-
-    <img src="./IMG-20210812-WA0024.jpg" alt="Foto de Saulo. Saulo é um homem branco, de cabelos médios, cortados nas laterais, olhos e cabelos castanhos, sombrancelhas bem definidas e óculos. Na foto, veste uma camisa cinza com um cordão cinza. O fundo da foto é uma parede branca. No rosto de Saulo, um sorriso tímido e uma das sombrancelhas esá levemente arqueada." width = "200px" id="foto">
 
     <!--Seção do texto onde passo detalhes da minha trajetória. Note que a estrutura é feita em títulos h4, seguidos de parágrafos simples-->
-
+    
     <h4 id="titulo1">1. Por onde passei</h4>
 
     <p>Sou brasileiro, nascido em <strong>Juazeiro do Norte, no Ceará</strong>, onde morei até 2015. Em janeiro desse ano decidi me mudar para <strong>João Pessoa, na Paraíba</strong>, onde moro até hoje, no ponto mais oriental da América continental.</p>
