Cria um padding na foto, e coloca uma corzinha também

--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 
     <!--Foto com audiodescrição-->
 
-        <div><img src="./IMG-20210812-WA0024.jpg" alt="Foto de Saulo. Saulo é um homem branco, de cabelos médios, cortados nas laterais, olhos e cabelos castanhos, sombrancelhas bem definidas e óculos. Na foto, veste uma camisa cinza com um cordão cinza. O fundo da foto é uma parede branca. No rosto de Saulo, um sorriso tímido e uma das sombrancelhas esá levemente arqueada." width = "200px" id="foto"><br>
+        <div class="image_container">
+            
+            <img src="./IMG-20210812-WA0024.jpg" alt="Foto de Saulo. Saulo é um homem branco, de cabelos médios, cortados nas laterais, olhos e cabelos castanhos, sombrancelhas bem definidas e óculos. Na foto, veste uma camisa cinza com um cordão cinza. O fundo da foto é uma parede branca. No rosto de Saulo, um sorriso tímido e uma das sombrancelhas está levemente arqueada." id="foto"><br>
 
-        Olá!
-        Meu nome é Saulo, e estou desenvolvento minhas habilidades como desenvolvedor. Dou as boas-vindas a você que está adentrando em meu mundo!</div>
+            Olá!
+            Meu nome é Saulo, e estou desenvolvento minhas habilidades como desenvolvedor. Dou as boas-vindas a você que está adentrando em meu mundo!
+
+        </div>
 
     </div>
 
